--- a/.eslintrc
+++ b/.eslintrc
@@ -3,6 +3,9 @@
     //   "react-app"
     // ]
     "extends": [
-        "plugin:react/recommended"
+        "plugin:react/recommended",
+        "plugin:react/recommended",
+        "plugin:react/jsx-runtime",
+        "plugin:react-hooks/recommended"
     ]
 }
